--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -77,6 +77,30 @@
 	
 }
 
+#delayInput{
+	
+	font-size: 50px;
+	
+	height: 50px;
+	
+	width: 125px;
+	
+}
+
+
+
+#delayInput:focus {
+	
+	outline: 0;
+	
+}
+
+#delayInput::-moz-focus-inner {
+  
+  border: 0;
+  
+}
+
 /* Classes */
 
 .activeMicrophone{
