--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -79,11 +79,17 @@
 
 #delayInput{
 	
-	font-size: 20px;
+	position: absolute;
 	
-	height: 50px;
+	right: 0px;
+	
+	top: 50vh;
 	
 	width: 300px;
+	
+	margin-right: -100px;
+	
+	transform: rotate(90deg);
 	
 }
 
@@ -101,12 +107,48 @@
   
 }
 
+#delayPreview{
+	
+	
+	
+}
+
 /* Classes */
 
 .activeMicrophone{
 	
 	color: #dd222b;
 	
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;   
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
 }
 
 /* Tags */
