--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -149,6 +149,54 @@
 	
 }
 
+#menuButton{
+	
+	position: absolute;
+	
+	left: 30px;
+	
+	top: 30px;
+	
+	font-size: 50px;
+	
+}
+
+#sideMenu{
+	
+	position: absolute;
+	
+	background: #232323;
+	
+	height: 100vh;
+	
+	width: 0px;
+	
+	color: white;
+	
+	transition: 0.5s;
+	
+}
+
+#sideMenu *{
+	
+	float: right;
+	
+}
+
+#menuClose{
+	
+	position: absolute;
+	
+	top: 15px;
+	
+	right: 15px;
+	
+	color: white;
+	
+	font-size: 30px;
+	
+}
+
 /* Classes */
 
 .activeMicrophone{
@@ -163,7 +211,7 @@
 	width: 100%;
 	height: 15px;
 	border-radius: 5px;   
-	background: #d3d3d3;
+	background: #aaaaaa;
 	outline: none;
 	opacity: 0.7;
 	-webkit-transition: .2s;
@@ -178,7 +226,7 @@
 	width: 25px;
 	height: 25px;
 	border-radius: 50%; 
-	background: #4CAF50;
+	background: #ffffff;
 	cursor: pointer;
 	
 }
@@ -188,7 +236,7 @@
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
-	background: #4CAF50;
+	background: #ffffff;
 	cursor: pointer;
 	
 }
@@ -202,6 +250,8 @@
 	right: 20px;
 	
 	font-size: 60px;
+	
+	color: white;
 	
 }
 
