--- a/www/assets/css/index.css
+++ b/www/assets/css/index.css
@@ -213,7 +213,7 @@
 	border-radius: 5px;   
 	background: #aaaaaa;
 	outline: none;
-	opacity: 0.7;
+	opacity: 1;
 	-webkit-transition: .2s;
 	transition: opacity .2s;
 	
@@ -226,7 +226,7 @@
 	width: 25px;
 	height: 25px;
 	border-radius: 50%; 
-	background: #ffffff;
+	background: white;
 	cursor: pointer;
 	
 }
@@ -236,7 +236,7 @@
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
-	background: #ffffff;
+	background: white;
 	cursor: pointer;
 	
 }
@@ -252,6 +252,14 @@
 	font-size: 60px;
 	
 	color: white;
+	
+	transition: 0.5s;
+	
+}
+
+.delayButton:active{
+	
+	opacity: 0.5;
 	
 }
 
